# TableManager

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: static.yml
documentation/: Doxyfile
documentation/html/: annotated.html  annotated_dup.js  class_command_creator-members.html  class_command_creator.html  class_command_creator.js  class_executor-members.html  class_executor.html  class_executor.js  class_expression_handler-members.html  class_expression_handler.html  class_expression_handler.js  class_operator_picker-members.html  class_operator_picker.html  class_operator_picker.js  class_operator_saver-members.html  class_operator_saver.html  class_operator_saver.js  class_table-members.html  class_table.html  class_table.js  class_validator-members.html  class_validator.html  class_validator.js  classes.html  command_8cpp.html  command_8h.html  command_8h.js  command_8h_source.html  command__creator_8cpp.html  command__creator_8h.html  command__creator_8h.js  command__creator_8h_source.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  doxygen.css  executor_8cpp.html  executor_8h.html  executor_8h.js  executor_8h_source.html  expression__handler_8cpp.html  (+100 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+11 more)
inc/: command.h  commandCreator.h  executor.h  executorHelperFunctions.h  expressionHandler.h  expression_handler.h  my_operator.h  operator_saver.h  operators.h  table.h  tableAddress.h  table_address.h  table_hash.h  validator.h
source/: command.cpp  command.h  command_creator.cpp  executor.cpp  executor.h  expression_handler.cpp  expression_handler.h  main.cpp  my_operator.cpp  my_operator.h  operator_picker.cpp  operator_picker.h  operator_saver.cpp  operator_saver.h  operators.cpp  table.cpp  table.h  table_address.cpp  table_address.h  table_hash.cpp  table_hash.h  validator.cpp  validator.h
src/: command.cpp  commandCreator.cpp  executor.cpp  executorHelperFunctions.cpp  expression_handler.cpp  main.cpp  myOperator.cpp  my_operator.cpp  operator_saver.cpp  operators.cpp  shuntingYard.cpp  table.cpp  tableAddress.cpp  table_address.cpp  validator.cpp
test/: test_shunting_yard.cpp  tests.cpp
